# deegagames-zk

./: .gitignore  ARCHITECTURE.md  CIRCUITS_SPEC.md  CONTRACTS_SPEC.md  Cargo.toml  GAME_FLOW.md  README.md  SPEC_COMPLETE.md  TASKS.md
circuits/: README.md
circuits/hand_ranker/: Nargo.toml  Prover.toml  README.md
circuits/hand_ranker/src/: main.nr
circuits/hand_validator/: Nargo.toml  Prover.toml  README.md
circuits/hand_validator/src/: main.nr
contracts/: README.md
contracts/game-hub/: Cargo.toml
contracts/game-hub/src/: lib.rs
contracts/games/poker/: Cargo.toml  README.md
contracts/games/poker/src/: lib.rs  test.rs
contracts/games/poker/test_snapshots/test/: test_cancel_waiting_by_other_after_timeout.1.json  test_cancel_waiting_by_other_before_timeout_fails.1.json  test_cancel_waiting_by_player_anytime.1.json  test_commit_and_reveal_seed.1.json  test_create_and_join_game.1.json  test_post_blinds_and_fold.1.json  test_set_payment_controller.1.json  test_sit_at_table_waiting_then_start.1.json
contracts/payment-controller/: Cargo.toml  README.md
contracts/payment-controller/src/: lib.rs  test.rs
contracts/proof-verifier/: Cargo.toml  README.md
contracts/proof-verifier/src/: lib.rs  test.rs
docs/: README.md
frontend/: .env.example  README.md  index.html  package.json  vite.config.ts
frontend/scripts/: init-game-manager.ts  setup-dev-wallets.ts
frontend/src/: App.tsx  config.ts  index.css
scripts/: README.md  bindings.sh  build.sh  deploy.sh  enable-escrow.sh  run-tests.sh  test_contracts.sh  update-env-contract-id.sh
(+23 files in other folders)
