[workspace]
resolver = "2"
members = [
  "contracts/games/poker",
  "contracts/game-hub",
  "contracts/payment-controller",
  "contracts/proof-verifier",
]

[workspace.dependencies]
soroban-sdk = "25.0.2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
